<resources>
    <string name="app_name">Kajet2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ustawienia</string>
    <string name="add_note">Dodaj notatke</string>
    <string name="no_notes">Brak notatek</string>
    <!--<string name="app_name">Kajet</string>-->
    <string name="menu_settings">Ustawienia</string>
    <string name="title">Tytuł notatki</string>
    <string name="body">Treść notatki</string>
    <string name="save">Zapisz</string>
    <string name="title_activity_add_note">Nowa notatka</string>
    <string name="title_activity_edit">Edycja notatki</string>
    <string name="usun">USUŃ</string>
    <string name="powrot">POWRÓT</string>
    <string name="modified">Ostatnia zmiana:</string>
    <string name="usun_wszystki">Usuń wszystkie</string>
    <string name="title_activity_delete_all">Usuwanie wszystkich</string>
    <string name="usun_all">Usuwanie WSZYSTKICH notatek</string>
    <string name="potwierdzenie">Jesteś pewien że chcesz usunąć WSZYSTKIE notatki?</string>
    <string name="operacja">(tej operacji nie można cofnąć!)</string>
    <string name="nie_usuwaj">NIE USUWAJ</string>
    <string name="priorytet">PRIORYTET:</string>
    <string name="niski">Niski</string>
    <string name="normalny">Normalny</string>
    <string name="wysoki">Wysoki</string>
    <string name="default_db">MEDIUM</string>
    <string name="db_niski">NISKI</string>
    <string name="db_normalny">NORMALNY</string>
    <string name="db_wysoki">WYSOKI</string>
</resources>
