<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.projekt.pablo.kajet2.DeleteAllActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usun_all"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffff0019"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="!"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffff0700"
            android:textSize="@android:dimen/thumbnail_width"
            android:textStyle="bold"
            android:typeface="normal"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/potwierdzenie"
            android:id="@+id/textView4"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/operacja"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nie_usuwaj"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="cancel"
            android:background="#ff00cf2c" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usun"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:background="#ffe20600"
            android:nestedScrollingEnabled="false"
            android:onClick="deleteAll" />
    </LinearLayout>
</RelativeLayout>
